--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "node-sass-chokidar": "^0.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
+    "postinstall": "yarn build-css",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "yarn build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
