--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
-    "enzyme": "^2.9.1"
+    "enzyme": "^2.9.1",
+    "react-test-renderer": "^15.6.1"
   }
 }
