--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
   "devDependencies": {
     "enzyme": "^2.9.1",
     "react-test-renderer": "^15.6.1"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
