--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "sequelize db:seed:undo:all && sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all && nodemon ./bin/www"
+    "devstart": "sequelize db:seed:undo:all && sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all && nodemon ./bin/www",
+    "provision-db": "sequelize db:migrate && sequelize db:seed:all"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
