--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,8 @@
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
-    "react-test-renderer": "^15.6.1",
-    "react-addons-test-utils": "^15.6.2"
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^15.6.1"
   },
   "proxy": "http://localhost:3001"
 }
