--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "postinstall": "yarn build-css",
     "build-css": "node-sass-chokidar src/sass -o src/styles",
     "watch-css": "yarn build-css && node-sass-chokidar src/sass -o src/styles --watch --recursive",
-    "format": "prettier --write ./src/**/*.js",
+    "format": "prettier --write ./src/*.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
