--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "mysql2": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.5.0",
     "sequelize-cli": "^2.8.0",
     "serve-favicon": "~2.4.2"
